# agentX

./: .code-ragignore  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile.frontend  FULL_STACK_README.md  Makefile  README.md  TESTING_FUNCTIONS.md  create_icon.py  docker-compose.full.yml  idea.md  index.html  mcp-config.json  minimal-test.js  nginx.conf  ollama-function-models.md  package.json  start-dev.sh  start-docker.sh  start-mcp-postgres.sh  tailwind.config.js  test-auth.html  test-chat-persistence.html  test_function_calling.js  test_functions.html  todo.md  update_session_timestamp.patch  vite-env.d.ts  vite.config.ts
.claude/agents/: ai-specialist.md  apple-design-productivity.md  go-expert.md
.code-rag/: config.json
agentx-backend/: .air.toml  .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  Dockerfile  MIGRATION_PLAN.md  Makefile  README.md  config.example.json  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  start.sh
agentx-backend/migrations/: 005_add_summaries.sql
agentx-web-search-mcp/: README.md  agentx-integration.json  package.json  test-mcp.cjs  tsconfig.json
code-rag-mcp/: .code-ragignore  .gitignore  .mcp.json  Dockerfile  Makefile  QUICKSTART.md  README-detailed.md  README.md  agentx_demo.go  code-rag-simple  docker-compose.yml  go.mod  go.sum  install.sh  mcp-stdio-server.py  mcp-test-server.sh  mcp-wrapper.sh  test-mcp.go  test_index.go  test_integration.sh  test_mcp_direct.go  test_search.go
code-rag-mcp/.code-rag/: config.json  hashes.db
code-rag-mcp/archived-scripts/: quickstart.sh  start-project.sh  start.sh  test_mcp.sh
code-rag-mcp/configs/: default.yaml  multi-project.yaml
code-rag-mcp/cross-encoder-service/: Dockerfile  cross_encoder_service.py  requirements.txt
code-rag-mcp/docs/: multi-project-guide.md
docs/: FEATURE_FLAGS.md  MIGRATION_NOTES.md  ai-features-specification.md  ai-implementation-summary.md  keyboard-shortcuts.md  mcp-postgres-setup.md  terminal-ui-design.md  terminal-ui-mockups.md
examples/: ai_features_demo.rs  fallback_ui_demo.rs  function_calling_example.md  mcp_integration_example.md  orchestrator_demo.rs  simple_terminal_test.rs  simple_test.rs  terminal_demo.rs  terminal_ui_demo.rs  test_chat.rs  test_config.rs  test_health_checks.rs  test_llm_basic.rs  test_local_llm.rs  test_mcp.rs  test_model_selector_with_health.rs  test_streaming.rs  test_terminal_ui.rs
src/: App.tsx  AppWithAuth.tsx  TestApp.tsx  lib.rs  main.tsx
src-backup/: config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: config.rs  lib.rs  main.rs  main_backup.rs  main_tauri.rs  tauri_main.rs
src-tauri/src/agents/: llm_agent.rs  orchestrator.rs
src-tauri/src/app/: mod.rs
src-tauri/src/mcp/: manager.rs  mod.rs  server.rs
src-tauri/src/providers/: anthropic.rs  deepseek_parser.rs  demo.rs  mcp_enhanced.rs  mod.rs  ollama_models.rs  openai.rs  openai_compatible.rs
src-tauri/src/ui/: mod.rs  simple.rs
(+331 files in other folders)
